# nixbox

./: .gitignore  LICENSE.md  README.md  flake.nix
.github/workflows/: ci.yaml
cli/: Cargo.toml  exportips.json
cli/src/: main.rs
docs/: README.md
example/: nixbox.nix
example/ipam/: devices.json  domains.json  ip-addresses.json
modules/: common.nix  domains.nix  interfaces.nix  nixbox.nix  service-template.nix  subnets.nix
utils/: builder.nix  datafile.json  default.nix  networking.nix  templates.nix  types.nix
utils/tests/: networking.nix
