[package]
name = "nixbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tvix-serde = { git = "https://github.com/tvlfyi/tvix.git", version = "0.1.0" }
